having flex wrap bug

--- a/styles/components/_section3.scss
+++ b/styles/components/_section3.scss
@@ -75,8 +75,6 @@
             .section3{
                 .box{
                     display: flex;
-                    justify-content: space-between;
-                    align-items: center;
                     flex-wrap: wrap;
                     .box1{
                         svg{
@@ -112,26 +110,24 @@
             .section3{
                 .box{
                     display: flex;
-                    justify-content: space-between;
-                    align-items: center;
                     flex-wrap: wrap;
                     .box1{
                         svg{
-                            width: 20%;
+                            width: 30%;
                             height: 20%;
                             padding-bottom: 12px;
                         }
                     }
                     .box2{
                         svg{
-                            width: 20%;
+                            width: 30%;
                             height: 20%;
                             padding-bottom: 12px;
                         }
                     }
                     .box3{
                         svg{
-                            width: 20%;
+                            width: 30%;
                             height: 20%;
                             padding-bottom: 12px;
                         }
