--- a/styles/index.css
+++ b/styles/index.css
@@ -309,8 +309,6 @@
 @media screen and (max-width: 1000px) {
   body main .section3 .box {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
   }
   body main .section3 .box .box1 svg {
@@ -332,22 +330,20 @@
 @media screen and (max-width: 700px) {
   body main .section3 .box {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
   }
   body main .section3 .box .box1 svg {
-    width: 20%;
+    width: 30%;
     height: 20%;
     padding-bottom: 12px;
   }
   body main .section3 .box .box2 svg {
-    width: 20%;
+    width: 30%;
     height: 20%;
     padding-bottom: 12px;
   }
   body main .section3 .box .box3 svg {
-    width: 20%;
+    width: 30%;
     height: 20%;
     padding-bottom: 12px;
   }
